--- a/sitemap.njk
+++ b/sitemap.njk
@@ -6,8 +6,7 @@ eleventyExcludeFromCollections: true
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" 
         xmlns:xhtml="http://www.w3.org/1999/xhtml"
         xmlns:image="http://www.google.com/schemas/sitemap-image/1.1">
-{%- for page in collections.all %}
-{%- if not page.data.excludeFromSitemap %}
+{%- for page in collections.sitemapPages %}
   <url>
     <loc>https://aisafety.no{{ page.url | url }}</loc>
     <lastmod>{{ page.date.toISOString() }}</lastmod>
@@ -30,9 +29,9 @@ eleventyExcludeFromCollections: true
     <image:image>
       <image:loc>https://aisafety.no{{ page.data.image }}</image:loc>
       <image:title>{{ page.data.title }}</image:title>
+      <image:caption>{{ page.data.description }}</image:caption>
     </image:image>
     {%- endif %}
   </url>
-{%- endif %}
 {%- endfor %}
 </urlset> 
