--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -147,4 +147,7 @@
   url: page.url,
   keywords: keywords
 }, currentLanguage) }}
+
+<!-- Script to ping search engines about this article -->
+<script src="/js/crawler-ping.js"></script>
 {% endblock %} 
